--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ theme:
   features: 
     #- navigation.footer
     - navigation.tabs
-    - toc.integrate
+    #- toc.integrate
   palette:
     # Palette toggle for automatic mode
     - media: "(prefers-color-scheme)"
