--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ theme:
   features: 
     #- navigation.footer
     - navigation.tabs
+    #- navigation.indexes #Atterir direct sur index
     #- toc.integrate
   palette:
     # Palette toggle for automatic mode
@@ -23,14 +24,14 @@ theme:
     - media: "(prefers-color-scheme: light)"
       scheme: default
       toggle:
-        icon: material/weather-sunny
+        icon: octicons/sun-16
         name: Switch to dark mode
 
     # Palette toggle for dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       toggle:
-        icon: material/weather-night
+        icon: octicons/moon-16
         name: Switch to system preference
 
 markdown_extensions: #for the emojis
