more CSV lesson wrote

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ theme:
     #- navigation.indexes #Atterir direct sur index
     #- toc.integrate
     - content.code.copy  # Optionnel, pour ajouter un bouton "Copier" sur les blocs de code
+    - content.code.annotate
     - attr_list
     - md_in_html
   palette:
