--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,5 @@ jobs:
       - run: pip install mkdocs-material
       - run: pip install mkdocs-nav-weight
       - run: pip install mkdocs-to-pdf
+      - run: pip install mkdocs-glightbox
       - run: mkdocs gh-deploy --force
