--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,4 +29,5 @@ jobs:
       - run: pip install mkdocs-nav-weight
       - run: pip install mkdocs-to-pdf
       - run: pip install mkdocs-glightbox
+      - run: pip install mkdocs-macros-plugin
       - run: mkdocs gh-deploy --force
