New lessons and exercices in Chapter 7 of NSI + new HTML editor upgrade + CSS playgrounds

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,7 @@ extra_javascript:
   - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
   - javascripts/editor-loader.js
   - javascripts/editor-module.js
+  - javascripts/bac_a_sable.js
 
 extra: 
   social: 
